--- a/src/i18n/dictionaries/en.json
+++ b/src/i18n/dictionaries/en.json
@@ -33,16 +33,8 @@
               "href": "/about"
             },
             {
-              "title": "Services",
-              "href": "/services"
-            },
-            {
-              "title": "Sectors",
-              "href": "/sectors"
-            },
-            {
-              "title": "Help center",
-              "href": "/help-center"
+              "title": "Contact us",
+              "href": "/contact"
             }
           ]
         },
@@ -751,5 +743,18 @@
       "refunded": "Refund processed",
       "unknown": "Unknown"
     }
+  },
+  "quoteRequest": {
+    "quoteSubmittedMessage": {
+      "successMessage": {
+        "message": "Your request successfully submitted.",
+        "description": "You get a e-mail with the details of your quote request."
+      },
+      "errorMessage": "We're sorry, but there was a problem processing your request. Please try again later. If the issue persists, feel free to contact our support team for assistance."
+    }
+  },
+  "cookieConsent": {
+    "message": "This website uses cookies to enhance the user experience.",
+    "accept": "Accept"
   }
 }
