--- a/src/i18n/dictionaries/en.json
+++ b/src/i18n/dictionaries/en.json
@@ -1,5 +1,7 @@
 {
   "common": {
+    "noDataFound": "No results.",
+    "registerEmail": "Register for industry news",
     "learnMore": "Learn more",
     "learnMoreUs": "Learn More About Us",
     "or": "or",
@@ -751,5 +753,11 @@
   "cookieConsent": {
     "message": "This website uses cookies to enhance the user experience.",
     "accept": "Accept"
+  },
+  "registerEmailMessages": {
+    "successfully": "Thank you for registering. Please check your email to confirm your account.",
+    "uniqueError": "You have registered before.",
+    "errorMessage": "We're sorry, but there was a problem processing your request. Please try again later. If the issue persists, feel free to contact our support team for assistance.",
+    "placeholder": "Your e-mail"
   }
 }
